<resources>
    <string name="app_name" translatable="false">StoryAppDicoding</string>
    <string name="icon" translatable="false">S</string>

    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_a_new_password">Enter a new password</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email">Enter your email</string>

    <string name="story" translatable="false">Story</string>

    <string name="upload_story">Upload Story</string>
    <string name="backdrop_story">backdrop story</string>
    <string name="full_image_of_story">full image of story</string>
    <string name="use_camera">use camera</string>
    <string name="add_story">add story</string>
    <string name="choose_image">Choose Image</string>
    <string name="switch_camera">switch camera</string>
    <string name="rotate_image">rotate image</string>
    <string name="lorem_ipsum" translatable="false">Lorem Ipsum dolor sit amet</string>
    <string name="email_invalid">Email format is invalid</string>
    <string name="password_invalid">Password must contain at least 6 character</string>
    <string name="original_image">original image</string>
    <string name="hide_original_image">hide original image</string>
    <string name="description">Description</string>
    <string name="desc_field">Write image description</string>
    <string name="submit">Submit</string>
    <string name="image_description">Image Description</string>

    <string name="appwidget_text" translatable="false">EXAMPLE</string>
    <string name="add_widget" translatable="false">Add widget</string>
    <string name="app_widget_description" translatable="false">This is an app widget description</string>
    <string name="empty_text">No Data</string>
    <string name="logout">Logout</string>
</resources>