<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_200"
    app:layoutDescription="@xml/activity_auth_scene"
    tools:context=".presentation.auth.ui.AuthActivity">

    <View
        android:id="@+id/signin_guideline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.60" />

    <View
        android:id="@+id/signup_guideline"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <!--  Login Layout  -->

    <Button
        android:id="@+id/btn_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/sign_in"

        app:layout_constraintBottom_toTopOf="parent"/>

    <com.thatnawfal.storyappdicoding.presentation.customview.EditTextPassword
        android:id="@+id/et_signin_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:autofillHints="password"
        android:hint="@string/password"
        android:background="@drawable/bg_form"
        android:inputType="textPassword"
        android:maxLines="1"

        android:paddingHorizontal="10dp"
        android:paddingVertical="15dp"
        app:layout_constraintBottom_toTopOf="@id/btn_signin"
        app:layout_constraintEnd_toEndOf="@id/btn_signin"
        app:layout_constraintStart_toStartOf="@id/btn_signin" />

    <com.thatnawfal.storyappdicoding.presentation.customview.EditTextEmail
        android:id="@+id/et_signin_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints="password"
        android:background="@drawable/bg_form"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"

        android:paddingHorizontal="10dp"
        android:paddingVertical="15dp"
        app:layout_constraintBottom_toTopOf="@id/et_signin_password"
        app:layout_constraintEnd_toEndOf="@id/et_signin_password"
        app:layout_constraintStart_toStartOf="@id/et_signin_password" />

    <TextView
        android:id="@+id/tv_signin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="80sp"
        android:textStyle="bold"

        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@id/et_signin_email"
        app:layout_constraintEnd_toEndOf="@id/et_signin_email"
        app:layout_constraintStart_toStartOf="@id/et_signin_email" />

    <!--  Register Layout  -->

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="80sp"
        android:textStyle="bold"

        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toBottomOf="parent"
        tools:layout_editor_absoluteX="32dp" />

    <EditText
        android:id="@+id/et_signup_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:autofillHints="text"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName"
        android:background="@drawable/bg_form"
        android:maxLines="1"

        android:paddingHorizontal="10dp"
        android:paddingVertical="15dp"
        app:layout_constraintEnd_toEndOf="@id/tv_signup"
        app:layout_constraintStart_toStartOf="@id/tv_signup"
        app:layout_constraintTop_toBottomOf="@id/tv_signup" />

    <com.thatnawfal.storyappdicoding.presentation.customview.EditTextEmail
        android:id="@+id/et_signup_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints="password"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress"
        android:background="@drawable/bg_form"
        android:maxLines="1"

        android:paddingHorizontal="10dp"
        android:paddingVertical="15dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/et_signup_name"
        app:layout_constraintEnd_toEndOf="@id/et_signup_name"
        app:layout_constraintStart_toStartOf="@id/et_signup_name" />

    <com.thatnawfal.storyappdicoding.presentation.customview.EditTextPassword
        android:id="@+id/et_signup_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:autofillHints="password"
        android:hint="@string/enter_a_new_password"
        android:inputType="textPassword"
        android:background="@drawable/bg_form"
        android:maxLines="1"

        android:layout_marginTop="16dp"
        android:paddingHorizontal="10dp"
        android:paddingVertical="15dp"
        app:layout_constraintTop_toBottomOf="@id/et_signup_email"
        app:layout_constraintEnd_toEndOf="@id/et_signup_email"
        app:layout_constraintStart_toStartOf="@id/et_signup_email" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"

        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="@id/et_signup_password"
        app:layout_constraintStart_toStartOf="@id/et_signup_password"
        app:layout_constraintTop_toBottomOf="@id/et_signup_password" />



</androidx.constraintlayout.motion.widget.MotionLayout>