<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/banner_profile"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/bg_banner_profile"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/tv_email"
        tools:ignore="ContentDescription" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_profile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/profile"

        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_names"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/white"

        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/iv_profile"
        app:layout_constraintStart_toStartOf="@id/iv_profile"
        app:layout_constraintEnd_toEndOf="@id/iv_profile"/>

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@color/white"

        android:layout_marginTop="8dp"
        android:paddingBottom="24dp"
        app:layout_constraintTop_toBottomOf="@id/tv_names"
        app:layout_constraintStart_toStartOf="@id/iv_profile"
        app:layout_constraintEnd_toEndOf="@id/iv_profile"/>

    <Button
        android:id="@+id/button_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"

        android:layout_margin="24dp"
        app:layout_constraintTop_toBottomOf="@id/banner_profile"/>


</androidx.constraintlayout.widget.ConstraintLayout>