<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="32dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_item_story"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        app:cardCornerRadius="24dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_item_story_backdrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/profile"
            android:contentDescription="@string/backdrop_story"/>

        <View
            android:id="@+id/black_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#BF000000"
            android:visibility="invisible"/>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/iv_item_story_full"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/profile"
        android:elevation="2dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@id/cv_item_story"
        app:layout_constraintEnd_toEndOf="@id/cv_item_story"
        app:layout_constraintTop_toTopOf="@id/cv_item_story"
        app:layout_constraintBottom_toBottomOf="@id/cv_item_story"
        android:contentDescription="@string/full_image_of_story"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_item_story_profile"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:elevation="2dp"
        android:src="@drawable/profile"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_item_story"
        app:layout_constraintBottom_toBottomOf="@id/cv_item_story"/>

    <TextView
        android:id="@+id/tv_item_story_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textColor="?attr/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_item_story_profile"/>


</androidx.constraintlayout.widget.ConstraintLayout>