<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Space
        android:id="@+id/space_bottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintVertical_bias="0.80"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Space
        android:id="@+id/space_unseen"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toBottomOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_detail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="24dp"

        app:cardCornerRadius="12dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/iv_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:contentDescription="@string/story"
            android:src="@drawable/ic_launcher_background"/>

    </androidx.cardview.widget.CardView>

    <ImageView
        android:id="@+id/bottom_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_circle_white"
        android:elevation="2dp"

        app:layout_constraintTop_toTopOf="@id/space_bottom"
        app:layout_constraintBottom_toBottomOf="@id/space_unseen"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_names_preview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="?attr/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold"
        android:elevation="2dp"

        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/iv_profile_preview"
        app:layout_constraintStart_toStartOf="@id/iv_profile_preview"
        app:layout_constraintEnd_toEndOf="@id/iv_profile_preview"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_profile_preview"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/ic_launcher_background"
        android:elevation="3dp"

        app:civ_border_color="@color/white"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_view"
        app:layout_constraintTop_toTopOf="@id/bottom_view"
        app:layout_constraintStart_toStartOf="@id/bottom_view"
        app:layout_constraintEnd_toEndOf="@id/bottom_view"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/highlight"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@color/black"
        android:alpha="0.7"
        android:elevation="3dp"

        app:civ_border_color="@color/white"
        app:civ_border_width="2dp"
        app:layout_constraintBottom_toTopOf="@id/bottom_view"
        app:layout_constraintTop_toTopOf="@id/bottom_view"
        app:layout_constraintStart_toStartOf="@id/bottom_view"
        app:layout_constraintEnd_toEndOf="@id/bottom_view"/>

    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="4dp"
        android:src="@drawable/ic_upload"
        app:tint="@color/white"

        app:layout_constraintStart_toStartOf="@id/iv_profile_preview"
        app:layout_constraintEnd_toEndOf="@id/iv_profile_preview"
        app:layout_constraintTop_toTopOf="@id/iv_profile_preview"
        app:layout_constraintBottom_toBottomOf="@id/iv_profile_preview"
        android:contentDescription="@string/upload_story"/>

</androidx.constraintlayout.widget.ConstraintLayout>